--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <section>
         <h2>Tabela do Brasileirão - Sésie A</h2>
         <p>Classificação - Temporada 2025</p>
-        <table>
+        <table border="1" style="width: 80%;" >
             <!--Cabeça da Tabela-->
             <thead>
                 <tr>
