--- a/Index.html
+++ b/Index.html
@@ -9,12 +9,13 @@
     <section>
         <h2>Tabela do Brasileirão - Sésie A</h2>
         <p>Classificação - Temporada 2025</p>
-        <table border="1" style="width: 80%;" >
+        <table style="width: 80%;" >
+        <hr/>
             <!--Cabeça da Tabela-->
             <thead>
                 <tr>
                     <th></th>
-                    <th align="center">Clube</th>
+                    <th> <b>Clube</b></th>
                     <th align="center">Pts</th>
                     <th align="center">PJ</th>
                     <th align="center">VT</th>
@@ -28,18 +29,115 @@
             </thead>
             <tbody>
                 <!-- Linha 1 -->
-                <t>
+                <tr>
                     <td style="background-color: blue;"></td>
-                    <td>1 <img src="/Imagens/Palmeiras.png" alt="" width="15px"> Palmeiras</td>
-                    <td align="center"> <b>30</b></td>
+                    <td>1<img src="/Imagens/Palmeiras.png" alt="" width="15px">Palmeiras</td>
+                    <td align="center"> <b>22</b></td>
                     <td align="center">10</td>
-                    <td align="center">9</td>
+                    <td align="center">7</td>
+                    <td align="center">1</td>
+                    <td align="center">2</td>
+                    <td align="center">11</td>
+                    <td align="center">6</td>
+                    <td align="center">5</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 2-->
+                <tr>
+                    <td style="background-color: blue;"></td>
+                    <td>2<img src="/Imagens/Flamengo.png" alt="" width="15px">Flamengo</td>
+                    <td align="center"> <b>21</b></td>
+                    <td align="center">10</td>
+                    <td align="center">6</td>
                     <td align="center">3</td>
                     <td align="center">1</td>
-                    <td align="center">25</td>
-                    <td align="center">10</td>
+                    <td align="center">19</td>
+                    <td align="center">4</td>
                     <td align="center">15</td>
-                    <td><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 3-->
+                <tr>
+                    <td style="background-color: blue;"></td>
+                    <td>3<img src="/Imagens/Cruzeiro.png" alt="" width="15px">Cruzeiro</td>
+                    <td align="center"> <b>20</b></td>
+                    <td align="center">10</td>
+                    <td align="center">6</td>
+                    <td align="center">2</td>
+                    <td align="center">2</td>
+                    <td align="center">15</td>
+                    <td align="center">7</td>
+                    <td align="center">8</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 4-->
+                <tr>
+                    <td style="background-color: blue;"></td>
+                    <td>4<img src="/Imagens/Bragantino.png" alt="" width="15px">Bragantino</td>
+                    <td align="center"><b>20</b></td>
+                    <td align="center">10</td>
+                    <td align="center">6</td>
+                    <td align="center">2</td>
+                    <td align="center">2</td>
+                    <td align="center">12</td>
+                    <td align="center">8</td>
+                    <td align="center">4</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 5-->
+                <tr>
+                    <td style="background-color:chocolate;"></td>
+                    <td>5<img src="/Imagens/Fluminense.png" alt="" width="15px">Fluminense</td>
+                    <td align="center"><b>17</b></td>
+                    <td align="center">10</td>
+                    <td align="center">5</td>
+                    <td align="center">2</td>
+                    <td align="center">3</td>
+                    <td align="center">13</td>
+                    <td align="center">12</td>
+                    <td align="center">1</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 6-->
+                <tr>
+                    <td style="background-color:chocolate;"></td>
+                    <td>6<img src="/Imagens/Ceará.png" alt="" width="15px">Ceará SC</td>
+                    <td align="center"><b>15</b></td>
+                    <td align="center">9</td>
+                    <td align="center">4</td>
+                    <td align="center">3</td>
+                    <td align="center">2</td>
+                    <td align="center">11</td>
+                    <td align="center">7</td>
+                    <td align="center">4</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 7-->
+                <tr>
+                    <td style="background-color:darkgreen;"></td>
+                    <td>7<img src="/Imagens/Bahia.png" alt="" width="15px">Bahia</td>
+                    <td align="center"><b>15</b></td>
+                    <td align="center">10</td>
+                    <td align="center">4</td>
+                    <td align="center">3</td>
+                    <td align="center">3</td>
+                    <td align="center">9</td>
+                    <td align="center">10</td>
+                    <td align="center">-1</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
+                </tr>
+                <!--Linha 8-->
+                <td style="background-color:darkgreen;"></td>
+                    <td>8<img src="/Imagens/corinthians.png" alt="" width="15px">Corinthians</td>
+                    <td align="center"><b>14</b></td>
+                    <td align="center">10</td>
+                    <td align="center">4 </td>
+                    <td align="center">2</td>
+                    <td align="center">3</td>
+                    <td align="center">13</td>
+                    <td align="center">12</td>
+                    <td align="center">1</td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/check.verde.png" alt="" width="10px"> <img src="/Imagens/xsimbol.png" alt="" width="10px"></td>
                 </tr>
             </tbody>
         </section>
