--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section>
-        <h2>Tabela do Brasileirão - Sésie A</h2>
+        <h2>Tabela do Brasileirão - Série A</h2>
         <p>Classificação - Temporada 2025</p>
         <table style="width: 80%;" >
         <hr/>
@@ -102,7 +102,7 @@
                     <td align="center">13</td>
                     <td align="center">12</td>
                     <td align="center">1</td>
-                    <td align="center"><img src="/Imagens/xred.png" alt="" width="15px"> <img src="/Imagens/check.verde.png" alt="" width="15px"> <img src="/Imagens/xred.png" alt="" width="15px"> <img src="/Imagens/negativo.simbol.png" alt="" width="15px"> <img src="/Imagens/check.verde.png" alt="" width="15px"></td>
+                    <td align="center"><img src="/Imagens/xred.png" alt="" width="15px"> <img src="/Imagens/check.verde.png" alt="" width="15px"> <img src="/Imagens/xred.png" alt="" width="15px"> <img src="/Imagens/negativo.simbol.png" alt="" width="15px"> <img src="/Imagens/checkduplo.png" alt="" width="15px"></td>
                 </tr>
                 <!--Posição 6-->
                 <tr>
